--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "react-hooks/rules-of-hooks": 2,
     "react-hooks/exhaustive-deps": 2
   },
