--- a/package.json
+++ b/package.json
@@ -8,43 +8,43 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist && rimraf lib",
-    "build": "yarn clean && yarn build:js && yarn build:esm",
+    "build": "npm run clean && npm run build:js && rimraf dist/__tests__ && npm run build:esm",
     "build:js": "tsc --declaration true --sourceMap true --downlevelIteration --removeComments true",
     "build:esm": "babel src --out-dir lib --extensions '.ts,.tsx' --source-maps --ignore '**/__tets__/**,**/*.test.tsx'",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "test": "yarn lint && jest"
+    "test": "npm run lint && jest"
   },
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.3"
+    "@babel/runtime": "^7.12.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.12",
-    "@types/react-dom": "^16.8.3",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
-    "babel-jest": "^24.7.1",
-    "concurrently": "^4.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "jest": "^24.7.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "babel-jest": "^26.6.3",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "semantic-release": "^17.2.3",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.1"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "repository": {
     "type": "git",
